# taup_python

./: .gitignore  .readthedocs.yaml  README.md  build_hints.md  example.py  example_curve.py  example_distaz.py  example_path.py  example_pierce.py  example_query.py  example_text.py  example_times.py  example_wavefront.py  pyproject.toml
docs/source/: conf.py  index.rst
examples/: example_phase.py  example_pierce.py  example_text.py  example_times.py  example_very_simple.py
src/taup/: __init__.py  beachball.py  curve.py  discon.py  distaz.py  find.py  http_server.py  path.py  phase.py  pierce.py  refltrans.py  table.py  taupversion.py  time.py  velmerge.py  velplot.py  version.py  wavefront.py
src/taup/dataclass/: Amplitude.py  Arrival.py  Curve.py  CurveResult.py  CurveSegment.py  Daz.py  Derivative.py  DerivativeSR.py  DistazResult.py  Fault.py  Isochron.py  PathSegment.py  PhaseBranch.py  PhaseDescription.py  PhaseRay.py  PhaseResult.py  PhaseSegment.py  RelativeArrival.py  Scatter.py  Source.py  TimeDist.py  TimeResult.py  Wavefront.py  WavefrontResult.py  __init__.py
