[build-system]
requires = ["hatchling>=1.26.1"]
build-backend = "hatchling.build"


[project]
name = "taup"
dynamic = ["version"]
authors = [
  {name="Philip Crotwell", email = "crotwell@seis.sc.edu"}
]
description = "The TauP Toolkit, via python using http"
readme = "README.md"
keywords = ["seismology", "traveltime"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10"
dependencies = [
    'requests',
    'tomli >= 1.1.0 ; python_version < "3.11"'
]

[project.urls]
Homepage = "https://github.com/crotwell/taup-python"
Repository = "https://github.com/crotwell/taup-python"
Issues = "https://github.com/crotwell/taup-python/issues"


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.hatch.version]
path = "src/taup/__init__.py"
